chore: remove warning when testing application